--- a/hx-deploy-tool.cabal
+++ b/hx-deploy-tool.cabal
@@ -19,14 +19,28 @@ executable hx-deploy-tool
   other-modules:       ADL.Core
                      , ADL.Core.Value
                      , ADL.Config
+                     , Commands
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                      , aeson >= 1.0 && < 1.1
+                     , amazonka >= 1.4 && < 1.5
+                     , amazonka-core >= 1.4 && < 1.5
+                     , amazonka-s3 >= 1.4 && < 1.5
                      , base64-bytestring >= 1.0 && < 1.1
                      , bytestring >= 0.10 && < 0.11
+                     , conduit >= 1.2.9 && < 1.3
+                     , conduit-extra >= 1.1.1 && < 1.2
                      , containers >= 0.5.7 && < 0.6
+                     , directory >= 1.3 && < 1.4
                      , filepath >= 1.4 && < 1.5
+                     , lens >= 4.15 && < 4.16
+                     , mustache >= 2.0 && < 2.2
+                     , path >= 0.5 && < 0.6
+                     , process >= 1.4.3 && < 1.5
+                     , resourcet >= 1.1.9 && < 1.2
                      , scientific >= 0.3.4 && < 0.4
                      , text >= 1.2 && < 1.3
+                     , unix >= 2.7 && < 2.8
                      , unordered-containers >= 0.2.7 && < 0.3
                      , vector >= 0.11 && < 0.12
+                     , zip >= 0.1.9 && < 0.2
