--- a/hx-deploy-tool.cabal
+++ b/hx-deploy-tool.cabal
@@ -19,6 +19,8 @@ executable hx-deploy-tool
   other-modules:       ADL.Core
                      , ADL.Core.Value
                      , ADL.Config
+                     , ADL.Release
+                     , ADL.Types
                      , Commands
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
@@ -32,7 +34,9 @@ executable hx-deploy-tool
                      , conduit-extra >= 1.1.1 && < 1.2
                      , containers >= 0.5.7 && < 0.6
                      , directory >= 1.3 && < 1.4
+                     , exceptions >= 0.8.3 && < 0.9
                      , filepath >= 1.4 && < 1.5
+                     , http-types >= 0.9.1 && < 0.10.0
                      , lens >= 4.15 && < 4.16
                      , mustache >= 2.0 && < 2.2
                      , path >= 0.5 && < 0.6
