--- a/hx-deploy-tool.cabal
+++ b/hx-deploy-tool.cabal
@@ -45,6 +45,7 @@ executable hx-deploy-tool
                      , resourcet >= 1.1.9 && < 1.3
                      , scientific >= 0.3.4 && < 0.4
                      , text >= 1.2 && < 1.3
+                     , time >= 1.8 && < 1.10
                      , unix >= 2.7 && < 2.8
                      , unordered-containers >= 0.2.7 && < 0.3
                      , vector >= 0.11 && < 0.13
