--- a/hx-deploy-tool.cabal
+++ b/hx-deploy-tool.cabal
@@ -18,11 +18,16 @@ executable hx-deploy-tool
   main-is:             Main.hs
   other-modules:       ADL.Core
                      , ADL.Core.Value
+                     , ADL.Core.StringMap
                      , ADL.Config
                      , ADL.Release
+                     , ADL.State
+                     , ADL.Sys.Types
                      , ADL.Types
                      , Commands
                      , Commands.LetsEncrypt
+                     , Commands.ProxyMode
+                     , Types
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                      , aeson >= 1.0 && < 1.3
@@ -42,6 +47,7 @@ executable hx-deploy-tool
                      , http-types >= 0.9.1 && < 0.13
                      , lens >= 4.15 && < 4.17
                      , mustache >= 2.0 && < 2.4
+                     , mtl >= 2.2.2 && < 2.3
                      , path >= 0.5 && < 0.7
                      , process >= 1.4.3 && < 1.7
                      , resourcet >= 1.1.9 && < 1.3
