--- a/hx-deploy-tool.cabal
+++ b/hx-deploy-tool.cabal
@@ -30,6 +30,7 @@ executable hx-deploy-tool
                      , Commands.LetsEncrypt
                      , Commands.ProxyMode
                      , HelpText
+                     , Log
                      , Types
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
@@ -40,6 +41,7 @@ executable hx-deploy-tool
                      , amazonka-route53 >= 1.4.5 && < 1.6
                      , amazonka-s3 >= 1.4 && < 1.6
                      , base64-bytestring >= 1.0 && < 1.1
+                     , binary >= 0.8.5.1 && < 0.9
                      , bytestring >= 0.10 && < 0.11
                      , conduit >= 1.2.9 && < 1.4
                      , conduit-extra >= 1.1.1 && < 1.4
