--- a/hx-deploy-tool.cabal
+++ b/hx-deploy-tool.cabal
@@ -55,6 +55,7 @@ executable hx-deploy-tool
                      , filepath >= 1.4 && < 1.5
                      , file-embed >= 0.0.10.1 && < 0.0.11
                      , http-types >= 0.9.1 && < 0.13
+                     , http-client >= 0.5.11 && < 0.6
                      , lens >= 4.15 && < 4.17
                      , mustache >= 2.0 && < 2.4
                      , mtl >= 2.2.2 && < 2.3
