--- a/hx-deploy-tool.cabal
+++ b/hx-deploy-tool.cabal
@@ -26,6 +26,8 @@ executable hx-deploy-tool
                      , ADL.State
                      , ADL.Sys.Types
                      , ADL.Types
+                     , Blobs
+                     , Blobs.S3
                      , Commands
                      , Commands.LetsEncrypt
                      , Commands.ProxyMode
