--- a/hx-deploy-tool.cabal
+++ b/hx-deploy-tool.cabal
@@ -76,4 +76,5 @@ executable hx-deploy-tool
                      , unix >= 2.7 && < 2.8
                      , unordered-containers >= 0.2.7 && < 0.3
                      , vector >= 0.11 && < 0.13
+                     , yaml >= 0.11 && < 0.12
                      , zip >= 0.1.9 && < 1.3
