--- a/hx-deploy-tool.cabal
+++ b/hx-deploy-tool.cabal
@@ -43,6 +43,7 @@ executable hx-deploy-tool
                      , Paths_hx_deploy_tool
                      , Types
                      , Util
+                     , Util.Aws
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                      , aeson >= 1.0 && < 1.5
