--- a/hx-deploy-tool.cabal
+++ b/hx-deploy-tool.cabal
@@ -68,6 +68,7 @@ executable hx-deploy-tool
                      , lens >= 4.15 && < 4.18
                      , mustache >= 2.0 && < 2.4
                      , mtl >= 2.2.2 && < 2.3
+                     , network-uri >= 2.6 && < 2.7
                      , path >= 0.5 && < 0.7
                      , process >= 1.4.3 && < 1.7
                      , resourcet >= 1.1.9 && < 1.3
