--- a/camus2.cabal
+++ b/camus2.cabal
@@ -13,7 +13,7 @@ build-type:          Simple
 cabal-version:       >=1.10
 extra-source-files:  README.md
 
-data-files:            docs/help.md
+data-files:            devdocs/help.md
                      , config/nginx.conf.tpl
 
 executable c2
