--- a/templates/camus2_remote-state.yaml
+++ b/templates/camus2_remote-state.yaml
@@ -1,22 +1,22 @@
-releasesDir: /deploytest/releases
+releasesDir: /tmp/deploytest/releases
 logFile: /tmp/deploytest/camus2.log
 releases: 
   localdir: /tmp/tests
-deployMode: 
+deployMode:
   proxy: 
     endPoints: 
       main: 
         serverNames: 
-          - main.localhost
+        - main.localhost
         etype: httpOnly
       test: 
         serverNames: 
-          - test.localhost
+        - test.localhost
         etype: httpOnly
     remoteStateS3: 
       just: s3://{S3 BUCKET FOR TRACKING APP STATE}
     slaveLabel:
-      - label: myslave
+      label: myslave
     dynamicPortRange: 
-        v1: 8000
-        v2: 8100
+      v1: 8000
+      v2: 8100
